tdf#96703: getDocumentStorage is called during initialization

So use DocumentGuard::MethodUsedDuringInit instead of DocumentGuard::DefaultMethod
to avoid com.sun.star.lang.NotInitializedException

Then we'll got to tackle ODatabaseModelImpl::getOrCreateRootStorage: no source to create the storage from!

Change-Id: I1f01bb46088445f3cb3264baee9ad4d45bb5fa8c
Reviewed-on: https://gerrit.libreoffice.org/41837
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
(cherry picked from commit 9a46ad2f762765348f7aef6e44774a47871362ae)
Reviewed-on: https://gerrit.libreoffice.org/41852
Reviewed-by: Eike Rathke <erack@redhat.com>